[package]
name = "usv-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
rppal = { version = "0.14.1", features = ["hal"] }
measurements = "0.11.0"
decimal-percentage = "0.1.3"
simple-signal = "1.1.1"
tokio-util = "0.7.8"
chrono = "0.4.26"
clap = { version = "4.3.22", features = ["derive"] }
thiserror = "1.0.47"

[profile.release]
strip = true
lto = true
codegen-units = 1